fixed bug on 5.0

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,5 +30,11 @@
             </intent-filter>
             <meta-data android:name="android.accessibilityservice" android:resource="@xml/accessible_service_config"/>
         </service>
+        <service android:name=".NotificationService"
+                 android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
