--- a/LuckyMoney/app/src/main/AndroidManifest.xml
+++ b/LuckyMoney/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
+            android:name=".LuckyMoney"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@android:style/Theme.NoTitleBar">
